Add interactions and api calls

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_URL=http://localhost:8000
+REACT_APP_BACKEND_URL=https://virtserver.swaggerhub.com/MANELET_1/vending-machine/1.0.0
