use real server

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=https://virtserver.swaggerhub.com/MANELET_1/vending-machine/1.0.0
-# REACT_APP_BACKEND_URL=https://vending-machine-delta.vercel.app
+# REACT_APP_BACKEND_URL=https://virtserver.swaggerhub.com/MANELET_1/vending-machine/1.0.0
+REACT_APP_BACKEND_URL=https://vending-machine-delta.vercel.app
